[cs-ui] Demo App - fixed spacing issues on sidebar in Safari

--- a/cs-ui-demo/src/App.scss
+++ b/cs-ui-demo/src/App.scss
@@ -738,9 +738,11 @@ body,
 				padding-left: 1rem;
 				margin-block-end: 0.5rem;
 				font-size: 1.375rem;
+				display: block;
 			}
 
 			.cs-input-search-wrapper {
+				display: block;
 				padding: 0.5rem;
 			}
 
